немножко исправленных баггов
1) {{url_for('static', filename='css/bootstrap.css')}}
2) input type='submit'
3) вокруг всех групп полей ввода <form
action='{{url_for('имя_функции_куда_передавать_результаты')}}'>
4) в одном месте незакрытый <ul>

--- a/templates/signarticle.html
+++ b/templates/signarticle.html
@@ -39,8 +39,8 @@
           <ul class="list-group"> {%for item in info_example%}
     <h3>{{item}}</h3>
     <p>{{info_example[item]}}</p>
-        {%endfor%}
-          </div>
+        {%endfor%} </ul>
+      </div>
       </div>
 {%endif%}
 
