--- a/templates/index.html
+++ b/templates/index.html
@@ -16,11 +16,11 @@
 </div>
 
 <div class="container">
-	<div class="form-group">
+	<form action='{{url_for('request')}}'> <div class="form-group">
       <label for="search">Поиск</label>
       <input type="search" class="form-control" id="search" placeholder="слово или жест">
     </div>
-<button type="submit" class="btn btn-default">искать</button>
+<input type="submit" class="btn btn-default">искать</input>
 </div>
 
 </body>
