--- a/templates/search.html
+++ b/templates/search.html
@@ -6,7 +6,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href={{url_for('static', filename='css/bootstrap.css')}}>
 </head>
 <body>
 <h1>Результаты поиска <span class="badge">{{results_num}}</span> </h1>
