исправила путаницу с render_template
и ещё понемножку чего-то

--- a/templates/search.html
+++ b/templates/search.html
@@ -10,11 +10,18 @@
 </head>
 <body>
 <h1>Результаты поиска <span class="badge">{{results_num}}</span> </h1>
+{%if results_num != 0%}
 <div class="container">
 <ul class="list-group"> {%for line in results%}
-    <li href="{{link}}" class="list-group-item">{{line}} </li>
+    <li href={{link}} class="list-group-item">{{line}} </li>
         {%endfor%}
     </ul>
     </div>
+{%endif%}
+{%else%}
+<div class="container">
+    <p> Ничего не найдено :( </p> <! тут надо добавить "возможно, вы имели в виду.." но это потом. и я пока не очень понимаю как это делается.>
+    </div>
+{%endelse%}
 </body>
 </html>
