--- a/templates/signarticle.html
+++ b/templates/signarticle.html
@@ -2,6 +2,13 @@
 <html lang="en">
 <head>
 
+<!РАБОТА С БД и CQL  найти откуда сюда высылаются переменные -
+    sign_id #как мы называем каждую страницу(адрес)
+    video #ссылка на видео
+    information #словарь для слова, где ключи - это название столбцов(перевод, этимология и т.п.), а значения - это информация в ячейке про данное слово
+    example_video #ссылка на видео с примером
+    info_example #словарь, ключи - названия столбцов, значения - содержание ячейки про данный пример  >
+
     <title>{{ sign_id }}</title> <! тут надо понять, как удобнее называть страницу>
 
     <meta charset="UTF-8">
