--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 </div>
 
 <div class="container">
-	<form action='{{url_for('request')}}'> <div class="form-group">
+	<form action='{{url_for(request)}}'> <div class="form-group">
       <label for="search">Поиск</label>
       <input type="search" class="form-control" id="search" placeholder="слово или жест">
     </div>
