--- a/templates/index.html
+++ b/templates/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>РЖЯ - русский словарь</title>
+    <head>
+      <title>РЖЯ - русский словарь</title>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href={{url_for('static', filename='css/bootstrap.css')}}>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <!-- link rel="stylesheet" href={{url_for('static', filename='css/bootstrap.css')}} -->
 
-</head>
-<body>
+    </head>
 
-<div class="jumbotron text-center">
-  <h1>РЖЯ - русский словарь</h1>
-  <p>Первый с поиском по жестам</p>
-</div>
+    <body>
 
-<div class="container">
-	<form action='{{url_for(request)}}'> <div class="form-group">
-      <label for="search">Поиск</label>
-      <input type="search" class="form-control" id="search" placeholder="слово или жест">
-    </div>
-<input type="submit" class="btn btn-default">искать</input>
-</div>
+        <div class="jumbotron text-center">
+          <h1>РЖЯ - русский словарь</h1>
+          <p>Первый с поиском по жестам</p>
+        </div>
 
-</body>
-</html>
+        <div class="container">
+            <form action='{{url_for('templates', filename = 'search.html', request)}}'>
+                <div class="form-group">
+                    <h2>Поиск</h2>
+                    <input type="text" class="form-control" id="search" placeholder="слово или жест">
+                    <button type="submit" class="btn btn-success">Искать</button>
+                </div>
+
+        </div>
+
+    </body>
 </html>
