--- a/templates/search.html
+++ b/templates/search.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
 
-    <title>Результаты поиска</title>
+        <title>Результаты поиска</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <!-- link rel="stylesheet" href={{url_for('static', filename='css/bootstrap.css')}} -->
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href={{url_for('static', filename='css/bootstrap.css')}}>
-</head>
-<body>
-<h1>Результаты поиска <span class="badge">{{results_num}}</span> </h1>
-{%if results_num != 0%}
-<div class="container">
-<ul class="list-group"> {%for line in results%}
-    <li href={{link}} class="list-group-item">{{line}} </li>
-        {%endfor%}
-    </ul>
-    </div>
-{%endif%}
-{%else%}
-<div class="container">
-    <p> Ничего не найдено :( </p> <! тут надо добавить "возможно, вы имели в виду.." но это потом. и я пока не очень понимаю как это делается.>
-    </div>
-{%endelse%}
-</body>
+    </head>
+
+
+    <body>
+
+        <h1> Результаты поиска <span class="badge">{{results_num}}</span> </h1>
+
+        {%if results_num != 0%}
+            <div class="container">
+                <ul class="list-group">
+                    {%for line in results%}
+                        <li href={{url_for('templates', filename = 'signarticle.html' , word={{word}} )}} class="list-group-item">{{line}} </li>
+                    {%endfor%}
+                </ul>
+            </div>
+        {%endif%}
+
+        {%else%}
+            <div class="container">
+                <p> Ничего не найдено :( </p> <!-- тут надо добавить "возможно, вы имели в виду.." но это потом. и я пока не очень понимаю как это делается.-->
+            </div>
+        {%endelse%}
+
+    </body>
 </html>
