--- a/templates/signarticle.html
+++ b/templates/signarticle.html
@@ -1,56 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
 
-<!РАБОТА С БД и CQL  найти откуда сюда высылаются переменные -
-    sign_id #как мы называем каждую страницу(адрес)
-    video #ссылка на видео
-    information #словарь для слова, где ключи - это название столбцов(перевод, этимология и т.п.), а значения - это информация в ячейке про данное слово
-    example_video #ссылка на видео с примером
-    info_example #словарь, ключи - названия столбцов, значения - содержание ячейки про данный пример  >
+    <!-- РАБОТА С БД и CQL  найти откуда сюда высылаются переменные -
+        sign_id #как мы называем каждую страницу(адрес)
+        video #ссылка на видео
+        information #словарь для слова, где ключи - это название столбцов(перевод, этимология и т.п.), а значения - это информация в ячейке про данное слово
+        example_video #ссылка на видео с примером
+        info_example #словарь, ключи - названия столбцов, значения - содержание ячейки про данный пример  -->
 
-    <title>{{ sign_id }}</title> <! тут надо понять, как удобнее называть страницу>
+        <title>{{ sign_id }}</title> <!-- тут надо понять, как удобнее называть страницу-->
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href={{url_for('static', filename='css/bootstrap.css')}}>
-</head>
-<body>
- <div class="media">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <!-- link rel="stylesheet" href={{url_for('static', filename='css/bootstrap.css')}} -->
+    </head>
 
-    <div class="media-left">
-    <video controls>
-    <source src={{ video }} type="video/mp4">
-    </video>
-    </div>
+    <body>
+     <div class="media">
 
-    <div class="media-body">
-    <ul class="list-group"> {%for item in information%}
-    <h2>{{item}}</h2>
-    <p>{{information[item]}}</p>
-        {%endfor%}
-    </ul>
-    </div>
- </div>
-
-{%if example_video != None%}
-  <div class="media">
-      <div class="media-left">
-
-    <video controls>
-    <source src={{example_video}} type="video/mp4">
-    </video>
+        <div class="media-left">
+            <video controls>
+                <source src={{ video }} type="video/mp4">
+            </video>
         </div>
-      <div class="media-body">
-          <h2>Пример употребления</h2>
-          <ul class="list-group"> {%for item in info_example%}
-    <h3>{{item}}</h3>
-    <p>{{info_example[item]}}</p>
-        {%endfor%} </ul>
+
+        <div class="media-body">
+            <ul class="list-group">
+                {%for item in information%}
+                    <h2>{{item}}</h2>
+                    <p>{{information[item]}}</p>
+                {%endfor%}
+             </ul>
+        </div>
+     </div>
+
+    {%if example_video != None%}
+      <div class="media">
+          <div class="media-left">
+
+                <video controls>
+                    <source src={{example_video}} type="video/mp4">
+                </video>
+          </div>
+
+          <div class="media-body">
+              <h2>Пример употребления</h2>
+              <ul class="list-group">
+                  {%for item in info_example%}
+                    <h3>{{item}}</h3>
+                    <p>{{info_example[item]}}</p>
+                  {%endfor%}
+              </ul>
+          </div>
       </div>
-      </div>
-{%endif%}
+    {%endif%}
 
 
-</body>
+    </body>
 </html>
