--- a/templates/search.html
+++ b/templates/search.html
@@ -13,23 +13,24 @@
 
     <body>
 
-        <h1> Результаты поиска <span class="badge">{{results_num}}</span> </h1>
+        <h1> Результаты поиска <span class="badge"> {{results_num}}</span> </h1>
 
         {%if results_num != 0%}
             <div class="container">
                 <ul class="list-group">
                     {%for line in results%}
-                        <li href={{url_for('templates', filename = 'signarticle.html' , word={{word}} )}} class="list-group-item">{{line}} </li>
+                        <li href={{url_for('word', word={{word}} )}} class="list-group-item">{{line}} </li>
                     {%endfor%}
                 </ul>
             </div>
-        {%endif%}
 
-        {%else%}
-            <div class="container">
-                <p> Ничего не найдено :( </p> <!-- тут надо добавить "возможно, вы имели в виду.." но это потом. и я пока не очень понимаю как это делается.-->
-            </div>
-        {%endelse%}
+
+            {%else%}
+                <div class="container">
+                    <p> Ничего не найдено :( </p> <!-- тут надо добавить "возможно, вы имели в виду.." но это потом. и я пока не очень понимаю как это делается.-->
+                </div>
+            {%endelse%}
+        {%endif%}
 
     </body>
 </html>
