--- a/templates/search.html
+++ b/templates/search.html
@@ -13,6 +13,38 @@
 
     <body>
 
+        <div class="container-fluid" >
+        <div class="row content">
+            <div class="col-sm-3 sidenav" style="background-color:#66ccff;">
+
+        <div class="text-center">
+            <h3>РЖЯ - русский словарь</h3>
+            <p>Первый с поиском по жестам</p>
+            <br>
+        </div>
+
+        <form action={{url_for('search')}} method="get">
+            <h4> Поиск </h4>
+
+            <div class="input-group">
+                <input name="request" type="text" class="form-control" placeholder="слово или жест">
+                <span class="input-group-btn">
+                  <button name="submit" class="btn btn-default" type="submit">
+                    <span class="glyphicon glyphicon-search"></span>
+                  </button>
+                </span>
+            </div>
+
+        </form>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </div>
+
+
+
+
+
+    <div class="col-sm-9">
+
         <h2> Результаты поиска <span class="badge"> {{results_num}}</span> </h2>
 
         {%if results_num != 0%}
@@ -48,6 +80,8 @@
                 </div>
 
         {%endif%}
-
+    </div>
+        </div>
+        </div>
     </body>
 </html>
