--- a/templates/word_example_random.html
+++ b/templates/word_example_random.html
@@ -15,8 +15,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
        <!--link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"-->
         
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+      <script src="{{url_for('static',filename='jquery.min.js')}}"></script>
+      <script src="{{url_for('static',filename='bootstrap.min.js')}}"></script>
         
 
     </head>
@@ -30,7 +30,7 @@
           </button>
 
           <div class="collapse navbar-collapse" id="navbarColor02">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav">
               <li class="nav-item active">
                 <a class="nav-link" href="#"> На главную <span class="sr-only">(current)</span></a>
               </li>
@@ -82,10 +82,10 @@
                         <iframe  src="https://www.youtube.com/embed/K7aEVy4rMcE" allowfullscreen>
                             Любовь
                         </iframe-->
-                        <div id="myCarousel" class="carousel" data-ride="carousel">
+                        <div id="myCarousel" class="carousel" data-ride="carousel" data-interval="false">
                             <!-- Indicators -->
                             <ol class="carousel-indicators">
-                              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                              <li data-target="#myCarousel" data-slide-to="0"></li>
                               <li data-target="#myCarousel" data-slide-to="1"></li>
                               <li data-target="#myCarousel" data-slide-to="2"></li>
                             </ol>
