templates, data from pickle to the word page

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,16 +1,76 @@
-<html>
-	<head>
-		<title>{{title}}</title>
-		<style>body { background: pink; }</style>
-        	<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css')}}">
-	</head>
-	<body>
-		<h1>{{title}}</h1>
-		<nav>
-			Where am I? {% block nav %} base {% endblock %}
-		</nav>
-		{% block main %}
-			This is the base.html
-		{% endblock %}
+<html lang="en">
+    <head>
+        <title>{{title}}</title>
+        <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css')}}">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="{{url_for('static',filename='jquery.min.js')}}"></script>
+        <script src="{{url_for('static',filename='bootstrap.min.js')}}"></script>
+    </head>
+
+    <body>
+        {%block contents%}
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+          <a class="navbar-brand" href="#"> <h2>РЖЯ - русский словарь</h2></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation" style="">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarColor02">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="#"> На главную <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"> Инфо </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"> Разное </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">О разработчиках</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+  
+           
+    <div class="container-fluid">
+        <div class="row content">        
+        
+               
+
+                <div class="col-sm-2 sidenav bg-secondary">
+
+                    <form action={{url_for('search')}} method="get">
+                        <h3> Поиск </h3>
+
+                        <div class="input-group">
+                            <input name="request" type="text" class="form-control" placeholder="слово или жест">
+                            <span class="input-group-btn">
+                              <button name="submit" class="btn btn-default" type="submit">
+                                <span class="glyphicon glyphicon-search"></span>
+                              </button>
+                            </span>
+                        </div>
+                    </form>
+
+                </div>
+          
+                    {% block main %}
+
+                    {% endblock %}
+                   
+                 </div>
+                </div>
+            </div>
+        </div>
+        {%endblock%}
+                   
+
+        
+
+        </div>
+        </div>
 	</body>
 </html>
