--- a/templates/search.html
+++ b/templates/search.html
@@ -1,87 +1,124 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
+{% extends "base.html" %}
 
-        <title>Результаты поиска</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <!-- link rel="stylesheet" href={{url_for('static', filename='css/bootstrap.css')}} -->
+{% set title = "Результаты поиска"%}   
+{%block main%}
+    <h2> Результаты поиска <span class="badge"> {{results_num}}</span> </h2>
 
-    </head>
+    {%if results_num != 0%}
+    <div class="container">
+        <ul class="list-group">
+            {%for n_entry in results%}
+            
+                <div class="media">
+                    <div class="media-left">
+                        <div class='container'>
+
+                    <div id="myCarousel" class="carousel" data-ride="carousel">
+                        <!-- Indicators -->
+                        <ol class="carousel-indicators">
+                            {% set n_overall = 0%}
+
+                            {%for sign in entry.signs%}
+                                {% set n_sign = loop.index%}
+                                {%for video in sign.videos%}
+                                  {% set n_video = loop.index%}
+                                  {%  set n_overall = (n_overall + 1)%}
+                                  {%if n_video==1  and n_sign==1%}                                       
+                                      <li data-target="#myCarousel" data-slide-to="{{n_overall}}" class="active"></li>
+                                  {%else%}
+                                      <li data-target="#myCarousel" data-slide-to="{{n_overall}}"></li>
+
+                                  {%endif%}
+                                {%endfor%}
+                            {%endfor%}                          
+
+                        </ol>
+
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner">
+
+                            {%for sign in entry.signs%} 
+                                {% set n_sign = loop.index%}
+                                {%for video in sign.videos%}
+                                    {% set n_video = loop.index%}
+
+                                  {%if n_video==1  and n_sign==1%}                                       
+                                      <div class="item active">
+                                   {%else%}
+                                      <div class="item">
+                                   {%endif%}
+                                      <div class="embed-responsive embed-responsive-16by9">                   
+                                          <iframe  src="{{video.url}}" allowfullscreen></iframe>
+                                      </div>
+                                      <div class="carousel-caption">
+                                          <p class=hamnosys style="font-size:20px"> 
+                                              {%if entry.sign|length > 1%}
+                                                  {{n_sign ~ '.'}}
+                                              {%endif%}
+                                              {%if sign.videos|length > 1%}
+                                                  {{n_video ~ '  '}}
+                                              {%endif%}
+                                              {{sign.hamnosys}}</p>
 
 
-    <body>
-
-        <div class="container-fluid" >
-        <div class="row content">
-            <div class="col-sm-3 sidenav" style="background-color:#66ccff;">
-
-        <div class="text-center">
-            <h3>РЖЯ - русский словарь</h3>
-            <p>Первый с поиском по жестам</p>
-            <br>
-        </div>
-
-        <form action={{url_for('search')}} method="get">
-            <h4> Поиск </h4>
-
-            <div class="input-group">
-                <input name="request" type="text" class="form-control" placeholder="слово или жест">
-                <span class="input-group-btn">
-                  <button name="submit" class="btn btn-default" type="submit">
-                    <span class="glyphicon glyphicon-search"></span>
-                  </button>
-                </span>
-            </div>
-
-        </form>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    </div>
+                                          {%if sign.labels.region|length != 0%} 
+                                          <p><i>{%for region in sign.labels.regions%}
+                                                      {% set n_label = loop.index%}
+                                                      {%if n_label == sign.labels.regions|length%}
+                                                              {{region}}
+                                                      {%else%}
+                                                              {{region + ', '}}
+                                                      {%endif%}
+                                                {%endfor%}
+                                          </i></p>
+                                           {%endif%}
 
 
+                                        </div>
+                                      </div>
 
-
-
-    <div class="col-sm-9">
-
-        <h2> Результаты поиска <span class="badge"> {{results_num}}</span> </h2>
-
-        {%if results_num != 0%}
-            <div class="container">
-                <ul class="list-group">
-                    {%for line in results%}
-                        <div class="media">
-
-                            <div class="media-left">
-                                <video controls>
-                                    <source src={{ line['video'] }} type="video/mp4">
-                                </video>
-                            </div>
-
-                            <div class="media-body">
-                                <ul class="list-group">
-                                    <h3>Перевод</h3>
-                                    <p>{{line['translation']}}</p>
-                                   <a href ="{{url_for('word', word=line['translation'])}}" class="btn btn-info"> перейти к статье </a>
-                                 </ul>
-                            </div>
-
+                                {%endfor%}
+                            {%endfor%}
                         </div>
 
-                    {%endfor%}
-                </ul>
-            </div>
 
+                        <!-- Left and right controls -->
+                         {%if n_overall > 1%}    
+                        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                          <span class="glyphicon glyphicon-chevron-left"></span>
+                          <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                          <span class="glyphicon glyphicon-chevron-right"></span>
+                          <span class="sr-only">Next</span>
+                        </a>
+                            {%endif%}
+               </div>
 
-            {%else%}
-                <div class="container">
-                    <p> Ничего не найдено :( </p> <!-- тут надо добавить "возможно, вы имели в виду.." но это потом. и я пока не очень понимаю как это делается.-->
-                </div>
+          </div>
+                            <video controls>
+                                <source src={{ line['video'] }} type="video/mp4">
+                            </video>
+                        </div>
 
-        {%endif%}
+                      <div class="media-body">
+                            <ul class="list-group">
+                               <a href ="{{url_for('word', word_n=word_n)}}" class="btn btn-info"> перейти к статье </a>
+                             </ul>
+                        </div>
+                    </div>
+
+                {%endfor%}
+         {%endfor%}            
+        </ul>
     </div>
+
+
+    {%else%}
+        <div class="container">
+            <p> Ничего не найдено :( </p> 
+            <!-- тут надо добавить "возможно, вы имели в виду.." но это потом. и я пока не очень понимаю как это делается.-->
         </div>
-        </div>
-    </body>
-</html>
+
+    {%endif%}
+{%endblock%}
