--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
                         <h3> Поиск </h3>
 
                         <div class="input-group">
-                            <input name="request" type="text" class="form-control" placeholder="слово или жест">
+                            <input name="query" type="text" class="form-control" placeholder="слово или жест">
                             <span class="input-group-btn">
                               <button name="submit" class="btn btn-default" type="submit">
                                 <span class="glyphicon glyphicon-search"></span>
