--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 <form class="container" action={{url_for('search')}} method="get">
     <h2> Поиск </h2> <br>
     <div class="form-group">
-        <input  name="request" type="text" class="form-control" placeholder="слово или жест" id="search" >
+        <input  name="query" type="text" class="form-control" placeholder="слово или жест" id="search" >
     </div>
     <button name="submit" type="submit" class="btn btn-success"> Искать </button>
 </form>
